src/deploy/kubernetes/auth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: iam
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: auth
      app.kubernetes.io/component: iam
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth
        app.kubernetes.io/component: iam
    spec:
      containers:
        - name: auth
          imagePullPolicy: Always
          image: quay.io/keycloak/keycloak:21.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          args:
            - "start"
            - "--hostname-strict-https=false"
            - "--http-enabled=true"
            - "--proxy=edge"
# health checks
