src/deploy/kubernetes/auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: iam
spec:
  selector:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: iam
  ports:
    - port: 80
      targetPort: 8080
