src/deploy/kubernetes/auth/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: iam
  name: auth
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: auth
                port:
                  number: 80
  tls:
    - hosts:
        - localhost
      secretName: auth-certs
